# nealog

./: .clang-format  .gitignore  .gitlint  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake-format.py
.github/workflows/: cmake.yml
include/nealog/: Error.h  Formatter.h  Logger.h  LoggerBase.h  LoggerRegistry.h  Mutex.h  Severity.h  Sink.h  Utility.h
include/nealog_impl/: ErrorImpl.h  FormatterImpl.h  LoggerImpl.h  SeverityImpl.h  SinkImpl.h
scripts/: coverage.sh
src/: CMakeLists.txt  Error.cpp  Formatter.cpp  Logger.cpp  Severity.cpp  Sink.cpp  pch.h
test/: CMakeLists.txt  FormatterTest.cpp  LoggerRegistryTest.cpp  LoggerTest.cpp  LoggerTreeRegistryTest.cpp  NoopSinkTest.cpp  SeverityTest.cpp  StreamSinkTest.cpp  TestApi.h  typehelper.h
